src/shared/adjusters/css/style.css
/* ... */
input[type="radio"] + label.radioButton-right > span {
    font-family: 'radioButtonIcons';
}

input[type="radio"] + label.radioButton-right > span:before {
    font-size: 150%;
    position: absolute;
    margin-top: -30px;
    margin-left: -21px;
    color: white;
    border: solid white;
    background-color: white;
    border-radius: 100%;
    border-width: thin medium;
    content: "\e001";
}

input[type="radio"]:checked + label.radioButton-right > span:before {
    color: #566273;
    border: solid white;
    background-color: white;
    border-radius: 100%;
    border-width: thin medium;
}

input[type="radio"] + label.radioButton-left {
    position: absolute;
    margin-top: 30px;
}

input[type="radio"] + label.radioButton-second {
    margin-left: 70px;
    position: absolute;
    margin-top: 30px;
}

input[type="radio"] + label.radioButton-third {
    margin-left: 140px;
    position: absolute;
    margin-top: 30px;
}

input[type="radio"] + label.radioButton-right {
    margin-left: 210px;
    position: absolute;
    margin-top: 30px;
}

input[type="radio"] + label {
    font-size: 90%;
}

input[type=checkbox] {
    position: absolute;
    overflow: hidden;
    clip: rect(0 0 0 0);
    height:0px;
    width:0px;
    margin:-1px;
    padding:0;
    border:0;
}

input[type=checkbox] + label.checkbox-label {
    font-family: 'Open Sans', sans-serif;
}

.presetButton-icon {
    font-family: 'presetButton';
    font-size: 600%!important;
    position: absolute;
    color: #566374;
    z-index: 1;
}

.presetButton-icon:before {
    content: "\e00d";
}

.white-baloon-icon {
    font-family: 'presetButtonPackage';
}

.white-baloon-icon:before {
    content: "\e004";
    position: absolute;
    z-index: 4;
    margin-top: 7px;
    margin-left: 7px;
    font-size: 70px;
    color: white;
}

.white-tick-icon {
    position: absolute;
    font-family: 'presetButtonPackage';
}

.white-tick-icon:before {
    content: "\e00a";
    position: absolute;
    z-index: 3;
    margin-top: 53px;
    margin-left: 288px;
    font-size: 20px;
    color: #566374;
    border: 4px solid white;
    border-radius: 100%;
    background-color: white;
}

input[type=checkbox] + label.preset-button-label {
    z-index: 2;
    position: absolute;
    padding-left: 125px;
    padding-top: 33px;
    color: white;
    background-color: #556273;
    width: 200px;
    height: 60px;
}

input[type=checkbox] + label.checkbox-label {
    margin-left: 25px;
    text-indent: -1.2em;
    font-family: 'checkboxTick';
    display: inline-block;
    width: 250px;
}

input[type=checkbox] + label.checkbox-label:before {
    content: "\e00a";
    color: transparent;
    border: 1px solid #556273;
    border-radius: 4px;
    background-color: white;
    font-size: 75%;
}

input[type=checkbox]:checked + label.checkbox-label {
    font-family: 'checkboxTick';
}

input[type=checkbox]:checked + label.checkbox-label:before {
    content: "\e00a";
    color: white;
    background-color: #556273;
}

.checkbox-span {
    font-family: 'Open Sans', sans-serif;
    font-size: 75%;
    padding-left: 5px;
}

input[type=checkbox] + label.more-options-label {
    cursor: pointer;
}

body {
    -webkit-user-select: none;
}

.ui-menu-item {
    width: 40% !important;
}

.ui-corner-all {
    width: 229px !important;
}

.ui-menu .ui-menu-item a {
    font-family: 'Open Sans', sans-serif;
    font-size: 80%;
    width: 200px !important;
}

div.ui-tooltip-content: {
    width: 20px;
}

.ui-widget {
    font-family: 'Roboto Slab', serif;
}

.ui-widget-content.ui-widget::selection { 
    background: yellow; /*Safari*/
}

.ui-widget-content::-moz-selection {
    background: yellow; /* Firefox */
}

.ui-widget .ui-widget-content {
    font-family: 'Open Sans', sans-serif;
    font-size: 90%;
    height: 33px;
    border: 2px;
    border-color: #D5E1E2;
    border-style: solid none solid solid;
    padding-left: 10px;
}

.ui-autocomplete-input {
    width: 219px;
}

.ui-widget .ui-button {
    height: 35px;
    width: 20px;
    margin-bottom: 2px;
    margin-left: -4px;
    border: 2px;
    border-style: solid solid solid none;
    border-color: #D5E1E2;
}

.ui-menu .ui-menu-item a.ui-state-focus {
    font-weight: bold;
    border: none;
    background: none;
}

.ui-autocomplete {
    cursor: pointer;
    border: solid 2px;
    border-color: #D5E1E2;
    max-height: 150px;
    overflow-y: auto;
    overflow-x: hidden; /* prevent horizontal scrollbar */
    padding-right: 15px; /* add padding to account for vertical scrollbar */
}

.fl-uiOptions .fl-uiOptions-onoff .fl-uiOptions-switch {
    font-family: Arial;
    border-radius:50px;
    border: 1px solid #D7DCDD;
    width: 5em;
    height: 2em;
    background-color: #FFFFFF;
    box-shadow: 1em 1.1em 0 0 rgba(250,250,250,0.53) inset;
    overflow:hidden;
    vertical-align: middle;
    display:inline-block;
    transition-duration: 0.2s;
    transition-property: padding-left, width, background-color, margin-left;
    font-size: 1.1em;
    font-weight: 700;
}

.fl-uiOptions .fl-uiOptions-onoff input {
    border: 0 none;
    clip: rect(0px, 0px, 0px, 0px);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.fl-uiOptions .fl-uiOptions-onoff input:focus + label {
    outline: 1px solid black;
}

.fl-uiOptions .fl-uiOptions-onoff input:checked + label .fl-uiOptions-switch {
    padding-left: 3em;
    width: 2em;
    background-color: rgb(23, 169, 184);
    box-shadow: -1em 1.1em 0.1em 0 rgba(172, 216, 92, 0.00) inset;
}

.fl-uiOptions .fl-uiOptions-onoff input + label [data-checkboxStateOn]:before {
    content: attr(data-checkboxStateOn);
}
.fl-uiOptions .fl-uiOptions-onoff input + label [data-checkboxStateOff]:after {
    content: attr(data-checkboxStateOff);
}
/* ... */

